@@ -11,6 +11,8 @@ pacsetup:
 - added timeout on mirrorlist fetching
 common:
 - don't install firmware packages, if autodetection is enabled
+manage:
+- don't strip firmware from new images
 ---
 Highlights 2025.12:
 - kernel 6.18.x
